@@ -1,5 +1,7 @@
 2009-10-31  Dominik Honnef  <dominikho@gmx.net>
 
+	* test/*: replaced test/unit with baretest
+
 	* README.markdown: updated README to reflect recent changes
 
 	* lib/keyword_arguments.rb (Module#define_our_temporary_method_added): default arguments are now evaluated blocks
